--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "sam": "https://github.com/SAMdesk/sam-node/tarball/master"
   },
   "devDependencies": {
-    "bower": "~1.2.8"
+    "bower": "~1.2.8",
+    "express3-handlebars": "~0.5.0",
+    "grunt": "~0.4.2",
+    "grunt-contrib-less": "~0.9.0"
   }
 }
