--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bower": "~1.2.8",
     "express3-handlebars": "~0.5.0",
     "grunt": "~0.4.2",
-    "grunt-contrib-less": "~0.9.0"
+    "grunt-contrib-less": "~0.9.0",
+    "urlexpand": "0.0.2",
+    "twitter-text": "~1.7.0"
   }
 }
