--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
   },
   "dependencies": {
     "express": "3.4.8",
-    "ejs": "*",
-    "sam": "https://github.com/SAMdesk/sam-node/tarball/master"
+    "express3-handlebars": "~0.5.0",
+    "sam": "https://github.com/SAMdesk/sam-node/tarball/master",
+    "twitter-text": "~1.7.0"
   },
   "devDependencies": {
     "bower": "~1.2.8",
-    "express3-handlebars": "~0.5.0",
     "grunt": "~0.4.2",
-    "grunt-contrib-less": "~0.9.0",
-    "urlexpand": "0.0.2",
-    "twitter-text": "~1.7.0"
+    "grunt-contrib-less": "~0.9.0"
   }
 }
